--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 .starter{
   font-size:30px;
-  padding:10px;
   display:block;
-  margin:40px;
   border:3px solid blue;
 }
 
 #output{
   background-color:pink;
+}
+
+#output, #input {
+	width: 150px;
+	height: 100px;
+  padding:10px;
+  margin:40px;
+  text-align: center;
 }
